--- a/Models/_tmp/2024.06.03_ControlSpeech.md
+++ b/Models/_tmp/2024.06.03_ControlSpeech.md
@@ -68,7 +68,7 @@
 <summary>原文</summary>
 
 > Over the past decade, the field of speech synthesis has seen remarkable advancements ([FastSpeech2](../../Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md), [VITS](../../Models/E2E/2021.06.11_VITS.md), [FastDiff](../../Models/Diffusion/2022.04.21_FastDiff.md), [FastSpeech](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md)), achieving synthesized speech that rivals real human speech in terms of expressiveness and naturalness ([NaturalSpeech](../../Models/E2E/2022.05.09_NaturalSpeech.md)).
-> Recently, with the development of large language models (GPT-3, GPT-4, LLaMA) and generative models (DDPM, [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md), [Glow-TTS](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md), [BVAE-TTS](../../Models/_tmp/BVAE-TTS.md)) in other domains, the tasks of zero-shot TTS ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md), [NaturalSpeech 2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md), [VoiceBox](../../Models/_tmp/2023.06.23_VoiceBox.md), [Mega-TTS](../../Models/_tmp/2023.06.06_Mega-TTS.md), [SoundStorm](../../Models/Speech_LLM/2023.05.16_SoundStorm.md)) and style-controllable speech synthesis ([PromptTTS](../../Models/_tmp/2022.11.22_PromptTTS.md), [PromptStyle](../../Models/E2E/2023.05.31_PromptStyle.md), [InstructTTS](../../Models/_tmp/2023.01.31_InstructTTS.md), [SALL-E](../../Datasets/2023.08.28_TextrolSpeech.md)) have garnered significant attention in the speech domain due to their powerful zero-shot generation and controllability capabilities.
+> Recently, with the development of large language models (GPT-3, GPT-4, LLaMA) and generative models (DDPM, [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md), [Glow-TTS](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md), [BVAE-TTS](../TTS2_Acoustic/BVAE-TTS.md)) in other domains, the tasks of zero-shot TTS ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md), [NaturalSpeech 2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md), [VoiceBox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md), [Mega-TTS](../../Models/_tmp/2023.06.06_Mega-TTS.md), [SoundStorm](../../Models/Speech_LLM/2023.05.16_SoundStorm.md)) and style-controllable speech synthesis ([PromptTTS](../../Models/_tmp/2022.11.22_PromptTTS.md), [PromptStyle](../../Models/E2E/2023.05.31_PromptStyle.md), [InstructTTS](../../Models/_tmp/2023.01.31_InstructTTS.md), [SALL-E](../../Datasets/2023.08.28_TextrolSpeech.md)) have garnered significant attention in the speech domain due to their powerful zero-shot generation and controllability capabilities.
 > Zero-shot TTS ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md), [NaturalSpeech 2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md), [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md)) refers to the ability to perfectly clone an unseen speaker’s voice using only a few seconds of a speech prompt by significantly scaling up both the corpus and model sizes.
 > Style-controllable TTS ([PromptTTS](../../Models/_tmp/2022.11.22_PromptTTS.md), [InstructTTS](../../Models/_tmp/2023.01.31_InstructTTS.md)), on the other hand, allows for the control of a speaker’s style (prosody, accent, emotion, etc.) through textual descriptions.
 
@@ -76,7 +76,7 @@
 <br>
 
 在过去的十年中, 语音合成领域取得了显著的进步, 例如 [FastSpeech2](../../Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md), [VITS](../../Models/E2E/2021.06.11_VITS.md), [FastDiff](../../Models/Diffusion/2022.04.21_FastDiff.md), [FastSpeech](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md), 实现了在表达性和自然度上能与真人语音相媲美的合成语音.
-近期, 随着大语言模型 (GPT-3, GPT-4, LLaMA) 和在其他领域的生成模型 (DDPM, [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md), [Glow-TTS](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md), [BVAE-TTS](../../Models/_tmp/BVAE-TTS.md)) 的发展, 零样本文本转语音任务 ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md), [NaturalSpeech 2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md), [VoiceBox](../../Models/_tmp/2023.06.23_VoiceBox.md), [Mega-TTS](../../Models/_tmp/2023.06.06_Mega-TTS.md), [SoundStorm](../../Models/Speech_LLM/2023.05.16_SoundStorm.md)) 和风格可控语音合成 ([PromptTTS](../../Models/_tmp/2022.11.22_PromptTTS.md), [PromptStyle](../../Models/E2E/2023.05.31_PromptStyle.md), [InstructTTS](../../Models/_tmp/2023.01.31_InstructTTS.md), [SALL-E](../../Datasets/2023.08.28_TextrolSpeech.md)) 在语音领域受到了极大的关注, 这得益于它们强大的零样本生成和可控性能力.
+近期, 随着大语言模型 (GPT-3, GPT-4, LLaMA) 和在其他领域的生成模型 (DDPM, [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md), [Glow-TTS](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md), [BVAE-TTS](../TTS2_Acoustic/BVAE-TTS.md)) 的发展, 零样本文本转语音任务 ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md), [NaturalSpeech 2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md), [VoiceBox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md), [Mega-TTS](../../Models/_tmp/2023.06.06_Mega-TTS.md), [SoundStorm](../../Models/Speech_LLM/2023.05.16_SoundStorm.md)) 和风格可控语音合成 ([PromptTTS](../../Models/_tmp/2022.11.22_PromptTTS.md), [PromptStyle](../../Models/E2E/2023.05.31_PromptStyle.md), [InstructTTS](../../Models/_tmp/2023.01.31_InstructTTS.md), [SALL-E](../../Datasets/2023.08.28_TextrolSpeech.md)) 在语音领域受到了极大的关注, 这得益于它们强大的零样本生成和可控性能力.
 
 - 零样本文本转语音 ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md), [NaturalSpeech 2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md), [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md)) 指的是通过显著扩撒语料库和模型规模, 仅使用几秒钟的语音提示就能完美克隆一个未见过的说话人的声音.
 - 风格可控文本转语音 ([PromptTTS](../../Models/_tmp/2022.11.22_PromptTTS.md), [InstructTTS](../../Models/_tmp/2023.01.31_InstructTTS.md)) 允许通过文本描述来控制说话人的风格 (语调, 口音, 情绪等).
@@ -109,8 +109,8 @@
 > The information from the two types of prompts can become entangled and interfere with each other.
 > For instance, the speech prompt might contain a style different from that described by the text.
 > Inspired by this observation, we attempted to incorporate the concept of an information bottleneck in ***ControlSpeech*** to achieve independent disentanglement of timbre, content, and style.
-> Additionally, to attain robust zero-shot speaker cloning capabilities, a large-scale, multi-speaker training dataset ([MLS](../../Datasets/2020.12.07_MLS.md), [Libri-Light](../../Datasets/LibriLight.md)) is essential.
-> Leveraging recent breakthroughs in the codec domain, we used [FACodec](../Diffusion/2024.03.05_NaturalSpeech3.md) which is pre-trained on 60,000 hours ([Libri-Light](../../Datasets/LibriLight.md)) speech as the speech tokenizer for ***ControlSpeech***.
+> Additionally, to attain robust zero-shot speaker cloning capabilities, a large-scale, multi-speaker training dataset ([MLS](../../Datasets/2020.12.07_MLS.md), [Libri-Light](../../Datasets/2019.12.17_Libri-Light.md)) is essential.
+> Leveraging recent breakthroughs in the codec domain, we used [FACodec](../Diffusion/2024.03.05_NaturalSpeech3.md) which is pre-trained on 60,000 hours ([Libri-Light](../../Datasets/2019.12.17_Libri-Light.md)) speech as the speech tokenizer for ***ControlSpeech***.
 > During the speech synthesis process, we adopted [FastSpeech2](../../Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md) as the base synthesis framework and employed an advanced non-autoregressive confidence-based codec generator [5, 2, [Phenaki](../../Models/_Basis_CV/2022.10.05_Phenaki.md)] as our decoder.
 
 </details>
@@ -120,8 +120,8 @@
 这两类提示包含的信息可能会互相纠缠相互干扰.
 例如, 语音提示可能包含于文本描述不同的风格.
 受此观察启发, 我们尝试在 ***ControlSpeech*** 中引入信息瓶颈的概念, 以实现音色, 内容和风格的独立解耦.
-此外, 为了获得强大的零样本说话人克隆能力, 一个大规模的多说话人训练数据集 ([MLS](../../Datasets/2020.12.07_MLS.md), [Libri-Light](../../Datasets/LibriLight.md)) 是必要的.
-结合近期在编解码器领域的突破, 我们使用在 60,000 小时的 [Libri-Light](../../Datasets/LibriLight.md) 语音上预训练的 [FACodec](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md) 作为 ***ControlSpeech*** 的语音分词器.
+此外, 为了获得强大的零样本说话人克隆能力, 一个大规模的多说话人训练数据集 ([MLS](../../Datasets/2020.12.07_MLS.md), [Libri-Light](../../Datasets/2019.12.17_Libri-Light.md)) 是必要的.
+结合近期在编解码器领域的突破, 我们使用在 60,000 小时的 [Libri-Light](../../Datasets/2019.12.17_Libri-Light.md) 语音上预训练的 [FACodec](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md) 作为 ***ControlSpeech*** 的语音分词器.
 在语音合成过程中, 我们采用 [FastSpeech2](../../Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md) 作为基础合成框架, 并采用先进的非自回归置信度编解码器生成器 (MaskGIT, [SoundStorm](../../Models/Speech_LLM/2023.05.16_SoundStorm.md), [Phenaki](../../Models/_Basis_CV/2022.10.05_Phenaki.md)) 作为解码器.
 
 <details>
@@ -241,9 +241,9 @@
 > [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md) leverages discrete codec representations and combines autoregressive and non-autoregressive models in a cascaded manner, preserving the powerful contextual capabilities of language models.
 > [NaturalSpeech 2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md) employs continuous vectors instead of discrete neural codec tokens and introduces in-context learning to a latent diffusion model.
 > [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md) and [Make-A-Voice](../../Models/_tmp/2023.05.30_Make-A-Voice.md) utilize semantic tokens to reduce the gap between text and acoustic features.
-> [VoiceBox](../../Models/_tmp/2023.06.23_VoiceBox.md) is a nonautoregressive flow-matching model trained to infill speech, given audio context and text.
+> [VoiceBox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md) is a nonautoregressive flow-matching model trained to infill speech, given audio context and text.
 > [Mega-TTS](../../Models/_tmp/2023.06.06_Mega-TTS.md), [Mega-TTS2](../../Models/_tmp/2023.07.14_Mega-TTS2.md), on the other hand, utilizes traditional mel-spectrograms, decoupling timbre and prosody and further modeling the prosody using an autoregressive approach.
-> [VoiceBox](../../Models/_tmp/2023.06.23_VoiceBox.md) and [P-Flow](../../Models/_tmp/P-Flow.md) employ flowing models as generators, demonstrating robust generative performance.
+> [VoiceBox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md) and [P-Flow](../../Models/_tmp/P-Flow.md) employ flowing models as generators, demonstrating robust generative performance.
 > [SoundStorm](../../Models/Speech_LLM/2023.05.16_SoundStorm.md) and [MobileSpeech](../../Models/_tmp/2024.02.14_MobileSpeech.md) utilize a non-autoregressive and mask-based iterative generation method, achieving an excellent balance between inference speed and generation quality.
 > Most relevant to our work is [NaturalSpeech 3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md), which also leverages the latest disentangled codec but primarily aims to enhance zero-shot model performance.
 > In contrast, we argue that a disentangled codec is inherently more suitable as the speech representation for controllable generative models.
@@ -259,7 +259,7 @@
 - [NaturalSpeech 2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md) 以连续向量而不是离散神经编解码器标记, 并引入隐变量扩散模型中的内在学习.
 - [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md) 和 [Make-A-Voice](../../Models/_tmp/2023.05.30_Make-A-Voice.md) 利用语义标记以减少文本和音频特征之间的差距.
 - [Mega-TTS](../../Models/_tmp/2023.06.06_Mega-TTS.md), [Mega-TTS2](../../Models/_tmp/2023.07.14_Mega-TTS2.md) 采用传统的梅尔频谱, 分离音色和语调, 并使用自回归方法进一步建模语调.
-- [VoiceBox](../../Models/_tmp/2023.06.23_VoiceBox.md) 和 [P-Flow](../../Models/_tmp/P-Flow.md) 采用流模型作为生成器, 展示出健壮的生成性能.
+- [VoiceBox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md) 和 [P-Flow](../../Models/_tmp/P-Flow.md) 采用流模型作为生成器, 展示出健壮的生成性能.
 - [SoundStorm](../../Models/Speech_LLM/2023.05.16_SoundStorm.md) 和 [MobileSpeech](../../Models/_tmp/2024.02.14_MobileSpeech.md) 采用非自回归和基于掩膜迭代生成方法, 实现了高效的推理速度和生成质量的良好平衡.
 - 与我们的工作最相关的是 [NaturalSpeech 3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md), 它也采用最新解耦编解码器, 但主要目标是提高零样本模型性能.
 
@@ -427,7 +427,7 @@ $$
 <details>
 <summary>原文</summary>
 
-> In the second stage, following [AdaSpeech](../../Models/_tmp/2021.03.01_AdaSpeech.md), we utilize a conditional normalization layer to fuse the previously obtained $Y_{codec} and $Y_t$, producing the input for the codec decoder.
+> In the second stage, following [AdaSpeech](../TTS2_Acoustic/2021.03.01_AdaSpeech.md), we utilize a conditional normalization layer to fuse the previously obtained $Y_{codec} and $Y_t$, producing the input for the codec decoder.
 > This input is then processed by the pre-trained decoder to generate the final speech output $Y$.
 > Specifically, we first use two simple linear layers $W_{\gamma}$ and $W_{\beta}$, which take the speaker embedding $Y_s$ as input and output the scale vectors $\gamma$ and bias vectors $\beta$ respectively.
 > These lightweight, learnable scale vectors $\gamma$ and bias vectors $\beta$ are then fused with $Y_{codec}$.
@@ -442,7 +442,7 @@ $$
 </details>
 <br>
 
-第二个阶段, 遵循 [AdaSpeech](../../Models/_tmp/2021.03.01_AdaSpeech.md), 我们利用条件归一化层融合之前获得的 $Y_{codec}$ 和 $Y_t$, 产生编解码器解码器的输入.
+第二个阶段, 遵循 [AdaSpeech](../TTS2_Acoustic/2021.03.01_AdaSpeech.md), 我们利用条件归一化层融合之前获得的 $Y_{codec}$ 和 $Y_t$, 产生编解码器解码器的输入.
 输入被预训练解码器处理后生成最终的语音输出 $Y$.
 具体来说, 我们首先使用两个简单线性层 $W_{\gamma}$ 和 $W_{\beta}$, 它们接收说话者嵌入 $Y_s$ 作为输入, 输出尺度向量 $\gamma$ 和偏差向量 $\beta$ 各自.
 这些轻量化的, 可学习的尺度向量 $\gamma$ 和偏差向量 $\beta$ 随后与 $Y_{codec}$ 融合.
