--- a/Models/Speech_LLM/2024.04.04_RALL-E.md
+++ b/Models/Speech_LLM/2024.04.04_RALL-E.md
@@ -18,10 +18,10 @@
   - [Sheng Zhao](../../Authors/Sheng_Zhao_(赵胜).md)
 - 机构:
   - [Microsoft](../../Institutions/Microsoft.md)
-  - [东京大学](../../Institutions/东京大学.md)
-  - [浙江大学](../../Institutions/浙江大学.md)
-  - [中国科学技术大学](../../Institutions/USTC.md)
-  - [香港中文大学](../../Institutions/CUHK.md)
+  - [东京大学](../../Institutions/UTokyo_东京大学.md)
+  - [浙江大学](../../Institutions/ZJU_浙江大学.md)
+  - [中国科学技术大学](../../Institutions/USTC_中国科学技术大学.md)
+  - [香港中文大学](../../Institutions/CUHK_香港中文大学.md)
 - 时间:
   - 预印时间: 2024.04.04 ArXiv v1
   - 预印时间: 2024.04.06 ArXiv v2
