--- a/Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md
+++ b/Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md
@@ -109,37 +109,55 @@
 
 ### 3.1.Training and Inference Procedures
 
-> ***Glow-TTS*** models the conditional distribution of mel-spectrograms PX (x|c) by transforming a conditional prior distribution PZ(z|c) through the flow-based decoder fdec : z → x, where x and c denote the input mel spectrogram and text sequence, respectively.
+> ***Glow-TTS*** models the conditional distribution of mel-spectrograms $P_{X} (x|c)$ by transforming a conditional prior distribution $P_{Z}(z|c)$ through the flow-based decoder $f_{dec}: z \to x$, where $x$ and $c$ denote the input mel spectrogram and text sequence, respectively.
 > By using the change of variables, we can calculate the exact log-likelihood of the data as follows:
 
-> We parameterize the data and prior distributions with network parameters θ and an alignment function A.
-> The prior distribution PZ is the isotropic multivariate Gaussian distribution and all the statistics of the prior distribution, µ and σ, are obtained by the text encoder fenc.
-> The text encoder maps the text condition c = c1:Ttext into the statistics, µ = µ1:Ttext and σ = σ1:Ttext, where Ttext denotes the length of the text input.
-> In our formulation, the alignment function A stands for the mapping from the index of the latent representation of speech to that of statistics from fenc: A(j) = i if zj ∼ N (zj; µi, σi).
-> We assume the alignment function A to be monotonic and surjective to ensure ***Glow-TTS*** not to skip or repeat the text input.
+$$
+  \log P_{X}(x|c) = \log P_Z(z|c) + \log \left|\text{det}\dfrac{\partial f_{dec}^{-1}(x)}{\partial x}\right|.\tag{01}
+$$
+
+> We parameterize the data and prior distributions with network parameters $\theta$ and an alignment function $A$.
+> The prior distribution $P_Z$ is the isotropic multivariate Gaussian distribution and all the statistics of the prior distribution, $\mu$ and $\sigma$, are obtained by the text encoder $f_{enc}$.
+> The text encoder maps the text condition $c = c_{1:T_{text}}$ into the statistics, $\mu = \mu_{1:T_{text}}$ and $\sigma = \sigma_{1:T_{text}}$, where $T_{text}$ denotes the length of the text input.
+> In our formulation, the alignment function $A$ stands for the mapping from the index of the latent representation of speech to that of statistics from $f_{enc}: A(j) = i$ if $z_j \sim \mathcal{N} (z_j; \mu_i, \sigma_i)$.
+> We assume the alignment function $A$ to be monotonic and subjective to ensure ***Glow-TTS*** not to skip or repeat the text input.
 > Then, the prior distribution can be expressed as follows:
 
-> where Tmel denotes the length of the input mel-spectrogram.
+$$
+  \log P_{Z}(z|c;\theta,A) = \sum_{j=1}^{T_{mel}} \log \mathcal{N}(z_j; \mu_{A(j)}, \sigma_{A(j)}).\tag{02}
+$$
 
-> Our goal is to find the parameters θ and the alignment A that maximize the log-likelihood of the data, as in Equation 3.
+> where $T_{mel}$ denotes the length of the input mel-spectrogram.
+
+> Our goal is to find the parameters $\theta$ and the alignment $A$ that maximize the log-likelihood of the data, as in Equation 3.
 > However, it is computationally intractable to find the global solution.
-> To tackle the intractability, we reduce the search space of the parameters and alignment by decomposing the objective into two subsequent problems: (i) searching for the most probable monotonic alignment A∗ with respect to the current parameters θ, as in Equation 4, and (ii) updating the parameters θ to maximize the log-likelihood log pX (x|c; θ, A∗).
+> To tackle the intractability, we reduce the search space of the parameters and alignment by decomposing the objective into two subsequent problems: (i) searching for the most probable monotonic alignment $A^{*}$ with respect to the current parameters θ, as in Equation 4, and (ii) updating the parameters θ to maximize the log-likelihood $\log p_{X} (x|c; \theta, A^{*})$.
 > In practice, we handle these two problems using an iterative approach.
-> At each training step, we first find A∗, and then update θ using the gradient descent.
+> At each training step, we first find $A^{*}$, and then update θ using the gradient descent.
 > The iterative procedure is actually one example of widely used Viterbi training [19], which maximizes log likelihood of the most likely hidden alignment.
 > The modified objective does not guarantee the global solution of Equation 3, but it still provides a good lower bound of the global solution.
 
 $$
+  \max_{\theta,A} Loss(\theta, A) = \max_{\theta,A} \log P_{X}(x|c;\theta,A).\tag{03}
 $$
 
 $$
+  A^{*} =\arg\max_{A} \log P_{X}(x|c;\theta,A)=\arg\max_{A}\sum_{j=1}^{T_{mel}} \log\mathcal{N}(z_j; \mu_{A(j)}, \sigma_{A(j)}).\tag{04}
 $$
 
 > To solve the alignment search problem (i), we introduce an alignment search algorithm, monotonic alignment search (MAS), which we describe in Section 3.2.
-> To estimate the most probable monotonic alignment A∗ at inference, we also train the duration predictor fdur to match the duration label calculated from the alignment A∗, as in Equation 5.
+> To estimate the most probable monotonic alignment $A^{*}$ at inference, we also train the duration predictor $f_{dur}$ to match the duration label calculated from the alignment $A^{*}$, as in Equation 5.
 > Following the architecture of [FastSpeech](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md), we append the duration predictor on top of the text encoder and train it with the mean squared error loss (MSE) in the logarithmic domain.
-> We also apply the stop gradient operator sg[·], which removes the gradient of input in the backward pass [30], to the input of the duration predictor to avoid affecting the maximum likelihood objective.
+> We also apply the stop gradient operator `sg[·]`, which removes the gradient of input in the backward pass [30], to the input of the duration predictor to avoid affecting the maximum likelihood objective.
 > The loss for the duration predictor is described in Equation 6.
+
+$$
+  d_i = \sum_{j=1}^{T_{mel}} 1_{A^{*}(j)=i},\quad i=1,\cdots,T_{text}\tag{05}
+$$
+
+$$
+  Loss_{dur} = MSE(f_{dur}(sg[f_{enc}(c)]), d),\tag{06}
+$$
 
 > During inference, as shown in Figure 1b, the statistics of the prior distribution and alignment are predicted by the text encoder and duration predictor.
 > Then, a latent variable is sampled from the prior distribution, and a mel-spectrogram is synthesized in parallel by transforming the latent variable through the flow-based decoder.
@@ -153,15 +171,16 @@ $$
 > We first derive a recursive solution over partial alignments and then find the entire alignment.
 
 > Let Qi,j be the maximum log-likelihood where the statistics of the prior distribution and the latent variable are partially given up to the i-th and j-th elements, respectively.
-> Then, Qi,j can be recursively formulated with Qi−1,j−1 and Qi,j−1, as in Equation 7, because if the last elements of partial sequences, zj and {µi, σi}, are aligned, the previous latent variable zj−1 should have been aligned to either {µi−1, σi−1} or {µi, σi} to satisfy monotonicity and surjection.
+> Then, Qi,j can be recursively formulated with Qi−1,j−1 and Qi,j−1, as in Equation 7, because if the last elements of partial sequences, zj and {\mui, \sigmai}, are aligned, the previous latent variable zj−1 should have been aligned to either {\mui−1, \sigmai−1} or {\mui, \sigmai} to satisfy monotonicity and surjection.
 
 $$
+  Q_{i,j} =\max_{A}\sum_{k=1}^{j} \log\mathcal{N}(z_k; \mu_{A(k)}, \sigma_{A(k)}) =\max (Q_{i-1,j-1}, Q_{i,j-1}) + \log \mathcal{N}(z_j; \mu_{i}, \sigma_{i}).\tag{07}
 $$
 
 > This process is illustrated in Figure 2b.
 > We iteratively calculate all the values of Q up to QTtext,Tmel .
-> Similarly, the most probable alignment A∗ can be obtained by determining which Q value is greater in the recurrence relation, Equation 7.
-> Thus, A∗ can be found efficiently with dynamic programming by caching all Q values; all the values of A∗ are backtracked from the end of the alignment, A∗(Tmel) = Ttext, as in Figure 2c.
+> Similarly, the most probable alignment A^{*} can be obtained by determining which Q value is greater in the recurrence relation, Equation 7.
+> Thus, A^{*} can be found efficiently with dynamic programming by caching all Q values; all the values of A^{*} are backtracked from the end of the alignment, A^{*}(Tmel) = Ttext, as in Figure 2c.
 > The time complexity of the algorithm is O(Ttext × Tmel).
 > Even though the algorithm is difficult to parallelize, it runs efficiently on CPU without the need for GPU executions.
 > In our experiments, it spends less than 20 ms on each iteration, which amounts to less than 2% of the total training time.
@@ -210,7 +229,7 @@ $$
 > For all the experiments, phonemes are chosen as input text tokens.
 > We follow the configuration for the mel-spectrogram of [WaveGlow](../../Models/TTS3_Vocoder/2018.10.31_WaveGlow.md), and all the generated mel-spectrograms from both models are transformed to raw waveforms through the pre-trained vocoder, [WaveGlow](../../Models/TTS3_Vocoder/2018.10.31_WaveGlow.md).
 
-> During training, we simply set the standard deviation σ of the learnable prior to be a constant 1.
+> During training, we simply set the standard deviation \sigma of the learnable prior to be a constant 1.
 > ***Glow-TTS*** was trained for 240K iterations using the [Adam optimizer](../../Models/_Basis/Adam.md) with the Noam learning rate schedule ([Transformer](../../Models/_Basis/2017.06.12_Transformer.md)).
 > This required only 3 days with mixed precision training on two NVIDIA V100 GPUs.
 
@@ -252,16 +271,17 @@ $$
 
 ### 5.3.Diversity and Controllability
 
-> Because ***Glow-TTS*** is a flow-based generative model, it can synthesize diverse samples; each latent representation z sampled from an input text is converted to a different mel-spectrogram fdec(z).
-> Specifically, the latent representation z ∼ N (µ, T ) can be expressed as follows:
+> Because ***Glow-TTS*** is a flow-based generative model, it can synthesize diverse samples; each latent representation z sampled from an input text is converted to a different mel-spectrogram $f_{dec}(z)$.
+> Specifically, the latent representation $z \sim \mathcal{N}(\mu, T)$ can be expressed as follows:
 
 $$
+  z = \mu + \varepsilon * T,\tag{08}
 $$
 
-> where (cid:15) denotes a sample from the standard normal distribution and µ and T denote the mean and standard deviation (i.e., temperature) of the prior distribution, respectively.
+> where $\varepsilon$ denotes a sample from the standard normal distribution and $\mu$ and $T$ denote the mean and standard deviation (i.e., temperature) of the prior distribution, respectively.
 
-> To decompose the effect of (cid:15) and T , we draw pitch tracks of synthesized samples in Figure 4 by varying (cid:15) and T one at a time.
-> Figure 4a demonstrates that diverse stress or intonation patterns of speech arise from (cid:15), whereas Figure 4b demonstrates that we can control the pitch of speech while maintaining similar intonation by only varying T .
+> To decompose the effect of $\varepsilon$ and $T$, we draw pitch tracks of synthesized samples in Figure 4 by varying $\varepsilon$ and $T$ one at a time.
+> Figure 4a demonstrates that diverse stress or intonation patterns of speech arise from $\varepsilon$, whereas Figure 4b demonstrates that we can control the pitch of speech while maintaining similar intonation by only varying $T$.
 > Additionally, we can control speaking rates of speech by multiplying a positive scalar value across the predicted duration of the duration predictor.
 > The result is visualized in Figure 5; the values multiplied by the predicted duration are 1.25, 1.0, 0.75, and 0.5.
 
