--- a/Models/Speech_LLM/2023.05.16_SoundStorm.md
+++ b/Models/Speech_LLM/2023.05.16_SoundStorm.md
@@ -1,37 +1,37 @@
----
-PDF: 
-标题: "SoundStorm: Efficient Parallel Audio Generation"
-作者:
-  - Zalan Borsos
-  - Matt Sharifi
-  - Damien Vincent
-  - Eugene Kharitonov
-  - Neil Zeghidour
-  - Marco Tagliasacchi
-机构:
-  - Google Research
-代码: 
-ArXiv: https://arxiv.org/abs/2305.09636
-提出时间: 2023-05-16
-出版社: 
-发表期刊: 
-发表时间: 
-引文数量: 
-被引次数: 36
-tags:
-  - 语音合成_TTS
-DOI: 
-aliases:
-  - SoundStorm
-ArXiv最新版本: 1
-ArXiv最新时间: 2023-05-16
-PageNum: 9
-Demo: https://google-research.github.io/seanet/soundstorm/examples/
----
-# SoundStorm: Efficient Parallel Audio Generation
+# SoundStorm
 
+<details>
+<summary>基本信息</summary>
 
-## A.摘要
+- 标题: SoundStorm: Efficient Parallel Audio Generation
+- 作者:
+  - [Zalan Borsos](../../Authors/Zalan_Borsos.md)
+  - [Matt Sharifi](../../Authors/Matt_Sharifi.md)
+  - [Damien Vincent](../../Authors/Damien_Vincent.md)
+  - [Eugene Kharitonov](../../Authors/Eugene_Kharitonov.md)
+  - [Neil Zeghidour](../../Authors/Neil_Zeghidour.md)
+  - [Marco Tagliasacchi](../../Authors/Marco_Tagliasacchi.md)
+- 机构:
+  - [Google Research](../../Institutions/Google.md)
+- 时间:
+  - 预印时间: 2023.05.16 ArXiv v1
+  - 更新笔记: 2024.06.13
+- 发表:
+  - 期刊/会议 
+- 链接:
+  - [ArXiv](https://arxiv.org/abs/2305.09636)
+  - [DOI]()
+  - [Github]()
+  - [Demo](https://google-research.github.io/seanet/soundstorm/examples/)
+- 标签:
+  - [语音合成](../../Tags/SpeechSynthesis.md)
+- 页数: 9
+- 引用: ?
+- 被引: 36
+
+</details>
+
+## Abstract·摘要
 
 > We present SoundStorm, a model for efficient, non-autoregressive audio generation.
 > SoundStorm receives as input the semantic tokens of [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md), and relies on bidirectional attention and confidence-based parallel decoding to generate the tokens of a neural audio codec.
@@ -45,7 +45,7 @@ SoundStorm 以 AudioLM 的语义 token 作为输入, 并依赖于双向注意力
 与 AudioLM 的自回归生成方法相比, SoundStorm 能够生成相同质量的音频, 且在声音和声学条件下具有更高的一致性的同时, 速度快两个数量级.
 我们通过合成高质量, 自然对话片段来展示模型扩展音频生成更长序列的能力. 这些对话片段需要给定一个带有说话者转录脚本和一个带有说话人声音的简短提示.
 
-## 1.引言
+## 1.Introduction·引言
 
 > Modeling discrete representations of audio produced by neural codecs ([SoundStream (2021)](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec (2022)](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)) makes the task of audio generation amenable to the powerful Transformer-based sequence-to-sequence modeling approaches ([Transformer (2017)](../../Models/_Basis/2017.06.12_Transformer.md)).
 > Casting unconditional and conditional audio generation as sequence-to-sequence modeling has unlocked rapid progress in speech continuation ([AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md)), text-to-speech ([VALL-E (2023)](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md)), and general audio and music generation ([AudioGen (2022)](); [MusicLM (2023)]()).
@@ -119,7 +119,7 @@ SoundStorm 生成的音频速度比 AudioLM 的分层自回归声学生成器快
 此外, 我们展示了 SoundStorm 与 SPEAR-TTS (2023) 的文本到语义建模阶段相结合, 可以合成高质量自然的对话, 允许通过脚本控制说话内容, 通过短语音提示控制说话者声音和通过脚本注释控制说话者轮次.
 在合成 30 秒的对话时, 我们在单个 TPU-v4（2023）上测量的运行时间为 2 秒.
 
-## 2.相关工作
+## 2.Related Works·相关工作
 
 ### Modeling the Tokens of Neural Audio Codecs
 
@@ -176,7 +176,7 @@ VALL-E (2023) 则依赖于混合方法, 其中对应第一个 RVQ 级别的 toke
 每轮预测的部分 token 通过一个计划表控制, 通常在迭代中逐渐增加 - 一旦预测, token 被视为固定.
 我们提出的解码方案可以视为 MaskGIT 的解码在残差量化生成的 token 序列的扩展.
 
-## 3.方法
+## 3.Methodology·方法
 
 > SoundStorm receives as input a sequence of discrete tokens representing the conditioning signal and produces as output a sequence of SoundStream tokens, which can be decoded back to audio waveforms. We assume that the conditioning signal is time-aligned with the SoundStream frames or can be upsampled to the same rate. Such a conditioning signal is, for example, the semantic token sequence used in [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md), [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md), or MusicLM, which makes our method a drop-in replacement for the acoustic generators of these models.
 
@@ -244,7 +244,7 @@ VALL-E (2023) 则依赖于混合方法, 其中对应第一个 RVQ 级别的 toke
 逐级进行解码使得我们可以利用更细级别中的条件独立性假设, 即多个更细的 token 可以并行采样, 因为它们表示局部且精细的声音细节.
 这意味着随着我们在解码中进行到更细 RVQ 级别时可以显著减少前向传递的次数.
 
-## 4.实验
+## 4.Experiments·实验
 
 ### 4.1.模型训练和推理设置
 
@@ -252,7 +252,7 @@ VALL-E (2023) 则依赖于混合方法, 其中对应第一个 RVQ 级别的 toke
 
 ## 5.对话合成
 
-## 6.结论
+## 6.Conclusions·结论
 
 > In this paper we present SoundStorm, a model that can synthesize high-quality audio from discrete conditioning tokens efficiently.
 > When compared to the acoustic generator of [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md), SoundStorm is two orders of magnitude faster and achieves higher temporal consistency when generating long audio samples.
@@ -262,7 +262,7 @@ VALL-E (2023) 则依赖于混合方法, 其中对应第一个 RVQ 级别的 toke
 和 AudioLM (2022) 的声学生成器相比, SoundStorm 运行速度快两个数量级, 且在生成长音频样本时获得更高的时序一致性.
 通过结合类似于 SPEAR-TTS (2023) 的文本到语义 token 模型, 能够将文本转语音合成扩展到更长内容和生成具有多个说话人轮次的自然对话, 同时控制说话人的声音和生成的内容.
 
-## 7.更广泛的影响
+## 7.Broader Impact·更广泛的影响
 
 > SoundStorm is a model for high-quality, efficient generation of neural audio codec-derived representations of audio.
 > In this work, we use it as a replacement for the acoustic generation pipeline of [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md) and [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md).
