--- a/Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md
+++ b/Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md
@@ -11,8 +11,10 @@
 - 机构:
   - [Kakao Enterprise](../Institutions/Kakao_Enterprise.md)
 - 时间:
-  - 2020.10.12 ArXiv v1
-  - 2020.10.23 ArXiv v2
+  - 预印时间: 2020.10.12 ArXiv v1
+  - 预印时间: 2020.10.23 ArXiv v2
+  - 更新笔记: 2024.06.15
+- 发表:
   - [NeurIPS 2020](../../Publications/NeurIPS.md)
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2010.05646)
@@ -20,9 +22,9 @@
   - [DOI](https://proceedings.neurips.cc/paper_files/paper/2020/hash/c5d736809766d46260d816d8dbc9eb44-Abstract.html)
   - [Github](https://github.com/jik876/hifi-gan)
 - 标签:
-  - #Vocoder_(声码器)
-  - #GAN_(生成对抗网络)
-  - #Adversarial_Learning_(对抗学习)
+  - [声码器](../../Tags/Vocoder.md)
+  - [生成对抗网络](../../Tags/GAN.md)
+  - [对抗学习](../../Tags/Learning_Adversarial.md)
 - 页数: 14
 - 引用: ?
 - 被引: 1444
