--- a/Models/E2E/2021.06.11_VITS.md
+++ b/Models/E2E/2021.06.11_VITS.md
@@ -9,7 +9,8 @@
   - [Jungil Kong](../../Authors/Jungil_Kong.md)
   - [Juhee Son](../../Authors/Juhee_Son.md)
 - 机构:
-
+  - [Kakao Enterprise](../../Institutions/Kakao_Enterprise.md)
+  - [KAIST](../../Institutions/KAIST_韩国科学技术研究所.md)
 - 时间:
   - 预印时间: 2021.06.11 ArXiv v1
   - 更新笔记: 2024.06.06
@@ -17,13 +18,15 @@
   - [ICML](../../Publications/ICML.md)
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2106.06103)
-  - [DOI]()
+  - [DOI](https://proceedings.mlr.press/v139/kim21f)
   - [Github](https://github.com/jaywalnut310/vits)
   - [Demo](https://jaywalnut310.github.io/vits-demo/index.html)
 - 标签:
   - [语音合成](../../Tags/SpeechSynthesis.md)
-  - [变分自编码器](../../Tags/Model_VAE.md)
-  - [对抗训练](../../Tags/Training_Adversarial.md)
+  - [模型-流](../../Tags/Model_Flow.md)
+  - [模型-变分自编码器](../../Tags/Model_VAE.md)
+  - [模型-生成对抗网络](../../Tags/GAN.md)
+  - [对抗学习](../../Tags/Learning_Adversarial.md)
   - [开源](../../Tags/OpenSource.md)
 - 页数: 15
 - 引用: ?
@@ -38,7 +41,7 @@
 > Our method adopts variational inference augmented with normalizing flows and an adversarial training process, which improves the expressive power of generative modeling.
 > We also propose a stochastic duration predictor to synthesize speech with diverse rhythms from input text.
 > With the uncertainty modeling over latent variables and the stochastic duration predictor, our method expresses the natural one-to-many relationship in which a text input can be spoken in multiple ways with different pitches and rhythms.
-> A subjective human evaluation (mean opinion score, or MOS) on the LJ Speech, a single speaker dataset, shows that our method outperforms the best publicly available TTS systems and achieves a MOS com parable to ground truth.
+> A subjective human evaluation ([Mean Opinion Score, or MOS](../../Evaluations/MOS.md)) on the [LJ Speech](../../Datasets/LJSpeech.md), a single speaker dataset, shows that our method outperforms the best publicly available TTS systems and achieves a MOS com parable to ground truth.
 
 近期几项端到端文本转语音模型使得单阶段训练和并行采样成为可能, 但它们的采样质量与两阶段系统的质量相比仍有差距.
 在本文中，我们提出了一个并行的端到端文本转语音方法, 其生成的音频更自然.
@@ -61,10 +64,10 @@
 
 > Neural network-based autoregressive TTS systems have shown the capability of synthesizing realistic speech ([Tacotron2 (2017)](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md); [Transformer-TTS (2018)](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md)), but their sequential generative process makes it difficult to fully utilize modern parallel processors.
 > To overcome this limitation and improve synthesis speed, several non-autoregressive methods have been proposed.
-> In the text-to-spectrogram generation step, extracting attention maps from pre-trained autoregressive teacher networks ([FastSpeech (2019)](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md); [ParaNet]()) is attempted to decrease the difficulty of learning alignments between text and spectrograms.
+> In the text-to-spectrogram generation step, extracting attention maps from pre-trained autoregressive teacher networks ([FastSpeech (2019)](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md); [ParaNet](../../Models/TTS2_Acoustic/2019.05.21_ParaNet.md)) is attempted to decrease the difficulty of learning alignments between text and spectrograms.
 > More recently, likelihood-based methods further eliminate the dependency on external aligners by estimating or learning alignments that maximize the likelihood of target mel-spectrograms ([AlignTTS (2020)](../../Models/TTS2_Acoustic/2020.03.04_AlignTTS.md); [Flow-TTS (2020)](../../Models/TTS2_Acoustic/2020.05.04_Flow-TTS.md); [Glow-TTS (2020)](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md)).
-> Meanwhile, [Generative Adversarial Networks (GANs)]() have been explored in second stage models.
-> GAN-based feed-forward networks with multiple discriminators, each distinguishing samples at different scales or periods, achieve high-quality raw waveform synthesis ([MelGAN (2019)](../TTS3_Vocoder/2019.10.08_MelGAN.md); [GAN-TTS (2019)]().
+> Meanwhile, [Generative Adversarial Networks (GANs)](../../Models/_Basis/2014.06.10_GAN.md) have been explored in second stage models.
+> GAN-based feed-forward networks with multiple discriminators, each distinguishing samples at different scales or periods, achieve high-quality raw waveform synthesis ([MelGAN (2019)](../../Models/TTS3_Vocoder/2019.10.08_MelGAN.md); [GAN-TTS (2019)](../../Models/TTS3_Vocoder/2019.09.25_GAN-TTS.md).
 
 基于神经网络的文本转语音系统已经展示了合成真实语音的能力, 但它们的顺序生成过程使得它们难以充分利用现代并行处理器.
 为了克服这一限制并提升合成速度, 已经有数种非自回归方法被提出.
@@ -75,7 +78,7 @@
 
 > Despite the progress of parallel TTS systems, two-stage pipelines remain problematic because they require sequential training or fine-tuning ([Tacotron2 (2017)](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md); [Wave-Tacotron (2020)]()) for high-quality production wherein latter stage models are trained with the generated samples of earlier stage models.
 > In addition, their dependency on predefined intermediate features precludes applying learned hidden representations to obtain further improvements in performance.
-> Recently, several works, i.e., [FastSpeech 2s (2020)](../TTS2_Acoustic/2020.06.08_FastSpeech2.md) and [EATS (2020)](), have proposed efficient end-to-end training methods such as training over short audio clips rather than entire waveforms, leveraging a mel-spectrogram decoder to aid text representation learning, and designing a specialized spectrogram loss to relax length-mismatch between target and generated speech. 
+> Recently, several works, i.e., [FastSpeech 2s (2020)](../TTS2_Acoustic/2020.06.08_FastSpeech2.md) and [EATS (2020)](../../Models/E2E/2020.06.05_EATS.md), have proposed efficient end-to-end training methods such as training over short audio clips rather than entire waveforms, leveraging a mel-spectrogram decoder to aid text representation learning, and designing a specialized spectrogram loss to relax length-mismatch between target and generated speech. 
 > However, despite potentially improving performance by utilizing the learned representations, their synthesis quality lags behind two-stage systems.
 
 尽管并行文本转语音系统取得了进展, 但两阶段方案仍然存在问题. 因为它们要求顺序训练或微调以获取高质量结果, 即后一阶段的模型需要在前一阶段模型的生成样本上进行训练.
@@ -108,7 +111,7 @@
 
 ### 2.1.End-to-End Text-to-Speech·端到端文本转语音
 
-> Currently, neural TTS models with a two-stage pipeline can synthesize human-like speech ([WaveNet (2016)](../../Models/TTS3_Vocoder/2016.09.12_WaveNet.md); [DeepVoice3](); [Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md)).
+> Currently, neural TTS models with a two-stage pipeline can synthesize human-like speech ([WaveNet (2016)](../../Models/TTS3_Vocoder/2016.09.12_WaveNet.md); [DeepVoice3](../../Models/TTS2_Acoustic/2017.10.20_DeepVoice3.md); [Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md)).
 > However, they typically require vocoders trained or fine-tuned with first stage model output, which causes training and deployment inefficiency.
 > They are also unable to reap the potential benefits of an end-to-end approach that can use learned hidden representations rather than predefined intermediate features.
 
@@ -117,9 +120,9 @@
 他们还无法利用端到端方法的潜在优势, 即可以利用学习到的隐藏表示而非预定义的中间特征.
 
 > Recently, single-stage end-to-end TTS models have been proposed to tackle the more challenging task of generating raw waveforms, which contain richer information (e.g., high-frequency response and phase) than mel-spectrograms, directly from text.
-> [FastSpeech 2s (2020)](../TTS2_Acoustic/2020.06.08_FastSpeech2.md) is an extension of FastSpeech 2 that enables end-to-end parallel generation by adopting adversarial training and an auxiliary mel-spectrogram decoder that helps learn text representations.
+> [FastSpeech 2s (2020)](../../Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md) is an extension of FastSpeech 2 that enables end-to-end parallel generation by adopting adversarial training and an auxiliary mel-spectrogram decoder that helps learn text representations.
 > However, to resolve the one-to-many problem, FastSpeech 2s must extract phoneme duration, pitch, and energy from speech used as input conditions in training.
-> [EATS (2020)]() employs adversarial training as well and a differentiable alignment scheme.
+> [EATS (2020)](../../Models/E2E/2020.06.05_EATS.md) employs adversarial training as well and a differentiable alignment scheme.
 > To resolve the length mismatch problem between generated and target speech, EATS adopts soft dynamic time warping loss that is calculated by dynamic programming.
 > [Wave-Tacotron (2020)]() combines normalizing flows with Tacotron 2 for an end-to-end structure but remains autoregressive.
 > The audio quality of all the aforementioned end-to-end TTS models is less than that of two-stage models.
@@ -175,8 +178,8 @@ Rezende, Chen, Ziegler 通过使用标准化流增强先验和后验分布表现
 
 ### 2.3.Duration Prediction in Non-Autoregressive Text-to-Speech·非自回归文本转语音中的时长预测
 
-> Autoregressive TTS models ([VoiceLoop (2017.07)](); [Tacotron](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md)); [Flowtron (2021)]() diverse speech with different rhythms through their autoregressive structure and several tricks including maintaining dropout probability during inference and priming ([Generating sequences with recurrent neural networks]()).
-> Parallel TTS models ([FastSpeech (2019)](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md); [ParaNet (2020)](); [Glow-TTS (2020)](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md); [FastSpeech 2s (2020)](../../Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md), on the other hand, have been relied on deterministic duration prediction.
+> Autoregressive TTS models ([VoiceLoop (2017.07)](); [Tacotron](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md)); [Flowtron (2021)](../../Models/TTS2_Acoustic/2020.05.12_Flowtron.md) diverse speech with different rhythms through their autoregressive structure and several tricks including maintaining dropout probability during inference and priming ([Generating sequences with recurrent neural networks]()).
+> Parallel TTS models ([FastSpeech (2019)](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md); [ParaNet (2020)](../../Models/TTS2_Acoustic/2019.05.21_ParaNet.md); [Glow-TTS (2020)](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md); [FastSpeech 2s (2020)](../../Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md), on the other hand, have been relied on deterministic duration prediction.
 > It is because parallel models have to predict target phoneme duration or the total length of target speech in one feed-forward path, which makes it hard to capture the correlated joint distribution of speech rhythms.
 > In this work, we suggest a flow-based stochastic duration predictor that learns the joint distribution of the estimated phoneme duration, resulting in the generation of diverse speech rhythms in parallel.
 
@@ -245,7 +248,7 @@ $$
 > We define the reconstruction loss in the mel-spectrogram domain to improve the perceptual quality by using a mel-scale that approximates the response of the human auditory system. 
 > Note that the mel-spectrogram estimation from a raw waveform does not require trainable parameters as it only uses STFT and linear projection onto the mel-scale. 
 > Furthermore, the estimation is only employed during training, not inference. 
-> In practice, we do not upsample the whole latent variables $z$ but use partial sequences as an input for the decoder, which is the windowed generator training used for efficient end-to-end training ([FastSpeech 2s (2020)](../TTS2_Acoustic/2020.06.08_FastSpeech2.md); [EATS (2020)]()).
+> In practice, we do not upsample the whole latent variables $z$ but use partial sequences as an input for the decoder, which is the windowed generator training used for efficient end-to-end training ([FastSpeech 2s (2020)](../../Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md); [EATS (2020)](../../Models/E2E/2020.06.05_EATS.md)).
 
 我们在梅尔频谱域中定义了重构损失, 以提高感知质量, 因为它使用一个近似人类听觉系统响应的梅尔刻度.
 注意, 从原始波形估计梅尔频谱不需要可训练参数, 因为它只使用短时傅里叶变换和线性投影到梅尔刻度.
