--- a/Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md
+++ b/Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md
@@ -92,7 +92,7 @@
 > They can estimate the exact likelihood of the data by applying invertible transformations.
 > Generative flows are simply trained to maximize the likelihood.
 > In addition to efficient density estimation, the transformations proposed in [2, 3, 12] guarantee fast and efficient sampling.
-> [WaveGlow](../../Models/TTS3_Vocoder/2018.10.31_WaveGlow.md) and [Flowavenet]() introduced these transformations for speech synthesis to overcome the slow sampling speed of an autoregressive vocoder, [WaveNet](../../Models/TTS3_Vocoder/2016.09.12_WaveNet.md).
+> [WaveGlow](../../Models/TTS3_Vocoder/2018.10.31_WaveGlow.md) and [FloWaveNet](../../Models/TTS3_Vocoder/2018.11.06_FloWaveNet.md) introduced these transformations for speech synthesis to overcome the slow sampling speed of an autoregressive vocoder, [WaveNet](../../Models/TTS3_Vocoder/2016.09.12_WaveNet.md).
 > Their proposed models both synthesized raw audio significantly faster than [WaveNet](../../Models/TTS3_Vocoder/2016.09.12_WaveNet.md).
 > By applying these transformations, ***Glow-TTS*** can synthesize a mel-spectrogram given text in parallel.
 
