--- a/Models/Speech_LLM/2024.01.14_ELLA-V.md
+++ b/Models/Speech_LLM/2024.01.14_ELLA-V.md
@@ -6,7 +6,7 @@
 - 标题: ELLA-V: Stable Neural Codec Language Modeling with Alignment-guided Sequence Reordering
 - 作者:
   - [Yakun Song](../../Authors/Yakun_Song.md)
-  - [Zhuo Chen](../../Authors/Zhuo_Chen.md)
+  - [Zhuo Chen](../../Authors/Zhuo_Chen_(陈卓).md)
   - [Xiaofei Wang](../../Authors/Xiaofei_Wang_(王晓飞).md)
   - [Ziyang Ma](../../Authors/Ziyang_Ma_(马子阳).md)
   - [Chen Xie](../../Authors/Xie_Chen_(陈谐).md)
