--- a/Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md
+++ b/Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md
@@ -9,7 +9,7 @@
   - [Jaehyeon Kim](../../Authors/Jaehyeon_Kim.md)
   - [Jaekyoung Bae](../../Authors/Jaekyoung_Bae.md)
 - 机构:
-  - [Kakao Enterprise](../Institutions/Kakao_Enterprise.md)
+  - [Kakao Enterprise](../../Institutions/Kakao_Enterprise.md)
 - 时间:
   - 预印时间: 2020.10.12 ArXiv v1
   - 预印时间: 2020.10.23 ArXiv v2
@@ -23,7 +23,7 @@
   - [Github](https://github.com/jik876/hifi-gan)
 - 标签:
   - [声码器](../../Tags/Vocoder.md)
-  - [生成对抗网络](../../Tags/GAN.md)
+  - [生成对抗网络](../../Tags/Model_GAN.md)
   - [对抗学习](../../Tags/Learning_Adversarial.md)
 - 页数: 14
 - 引用: ?
