--- a/Models/Speech_LLM/2023.06.06_Mega-TTS.md
+++ b/Models/Speech_LLM/2023.06.06_Mega-TTS.md
@@ -35,6 +35,7 @@
   - [语音合成](../../Tags/SpeechSynthesis.md)
   - [零样本](../../Tags/Zero-Shot.md)
   - [GAN](../../Tags/Model_GAN.md)
+  - [语言模型](../../Tags/LanguageModel.md)
 - 页数: 20
 - 引用: 67
 - 被引: 27
